Create API user detail
